add the command "/env"